Chapter3/2.2/manifests/todoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-2-2-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp-2-2
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
