Chapter3/2.2/manifests/todobackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todobackend-2-2-svc
spec:
  type: ClusterIP
  selector:
    app: todobackend-2-2
  ports:
    - protocol: TCP
      port: 2010
      targetPort: 3000
