Chapter3/2.2/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-2-2-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp-2-2-svc
            port:
              number: 2010
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todobackend-2-2-svc
            port: 
              number: 2010
